--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
